imdb test show add two number

--- a/templates/imdb.html
+++ b/templates/imdb.html
@@ -1,15 +1,12 @@
 <span>
   <form method="POST">
-    <textarea id=imdb_input name="imdb_input" style="width:400px; height:200px; white-space:normal;">{{ imdb_input }}</textarea>
+    <textarea id=a0 name="a0" style="width: 20px; height: 20px; white-space: normal;">{{ a0 }}</textarea>
+    <textarea id=a1 name="a1" style="width: 20px; height: 20px; white-space: normal;">{{ a1 }}</textarea>
     <input name="판정" type="submit" />
-    <script>
-      var textarea = document.getElementById("imdb_input");
-      textarea.addEventListener("paste", function() {
-        if (this.value !== "") {
-            this.value = this.value + "\n";
-        }
-    }, false);
-    </script>
   </form>
 </span>
-<div>{{ result }}</div>
+<div>
+  {{ a0 }}<br>
+  {{ a1 }}<br>
+  {{ result }}
+</div>
