--- a/templates/transformer.html
+++ b/templates/transformer.html
@@ -4,11 +4,11 @@
       id="a0"
       name="a0"
       placeholder="TEXT"
-      style="width: 100%; height: 70%;"
+      style="width: 100%; height: 70%"
     >
 {{ a0 }}</textarea
     ><br />
     <input name="판정" type="submit" />
   </form>
 </span>
-<h1 style="text-align: center">{{ result }}</h1>
+<h1 id="transformer" style="text-align: center">{{ result }}</h1>
