--- a/templates/transformer.html
+++ b/templates/transformer.html
@@ -1,12 +1,12 @@
 <span style="text-align: center">
   <form method="POST">
     <textarea
-      id="a0"
-      name="a0"
+      id="sentence"
+      name="sentence"
       placeholder="TEXT"
       style="width: 100%; height: 70%"
     >
-{{ a0 }}</textarea
+{{ sentence }}</textarea
     ><br />
     <input name="판정" type="submit" />
   </form>
